fix bug - fancy button (border-image) doesn't display on iphone

--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,8 @@ nav li.logo a:hover {
 }
 
 .fancy-button {
-  border: 10px solid transparent;
+  border-style: solid;
+  border-width: 10px;
   border-image: url("./shared/assets/border-diamond-lilac.png") 22 stretch;
   /* style below may be a desired alternative */
   /* border-image: url('./shared/border-diamond-lilac.png') 30 repeat; */
